--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,6 +15,7 @@
     
     
 }
+
 .navbar a{
     text-decoration: none;
     color: black;
@@ -24,6 +25,7 @@
     justify-content: space-around;
     list-style: none;
     gap: 20px;
+    flex-wrap: wrap;
 
 }
 .drop{
@@ -58,4 +60,5 @@
         flex-direction: column;
     
     }
+   
 }
